--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-"name": "Ammu",
+"name": "Tony-Ser",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/D-E-V-I-L-8/Ammu",
+  "repository": "https://github.com/ERR0R-x-PREDAT0R/Ammu",
   "keywords": ["bot", "whatsapp", "whatsapp-bot"],
 
     "buildpacks": [
